--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: "1.22"
           cache: false
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+      - name: Generate server protofiles
+        run: |
+          make integration-test-server
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
